--- a/charts.html
+++ b/charts.html
@@ -19,12 +19,12 @@
     <script src="../datatomusic/dtm.js"></script>
     
 </head>
-<body>
+<body style="padding:5px;">
     <p>
         <select id="selectItem" autofocus></select>
     </p>
     <p>
-        <select id="selectSeries" disabled="disabled"><option selected="selected" disabled="disabled">Select data series to listen</option></select> 
+        <select multiple id="selectSeries" disabled="disabled"><option selected="selected" disabled="disabled">Select data series to listen</option></select> 
     </p>
     <button id="sonify" class="ms-Button ms-Button--primary" disabled><span class="ms-Button-label">Sonify data</span><span class="ms-Button-description">Description of the action this button takes</span> </button>
 
